add freebsd toolchain to full container

--- a/container/base-full/Dockerfile
+++ b/container/base-full/Dockerfile
@@ -10,6 +10,7 @@ RUN  export HOST=$(dpkg --print-architecture) \
   && apt-get update                   \
   && apt-get install -yq              \
         clang:$HOST                   \
+        lld:$HOST                     \
         crossbuild-essential-amd64    \
         crossbuild-essential-i386     \
         crossbuild-essential-armel    \
@@ -20,6 +21,60 @@ RUN  export HOST=$(dpkg --print-architecture) \
         openssl                       \
         mingw-w64:$HOST               \
   && apt-get clean && rm -rf /var/lib/apt/lists/*
+
+FROM environment as freebsd
+
+RUN  export HOST=$(dpkg --print-architecture) \
+  && apt-get update      \
+  && apt-get install -yq \
+        libarchive-tools:$HOST \
+        xz-utils:$HOST   \
+  && apt-get clean && rm -rf /var/lib/apt/lists/*
+
+ENV FREEBSD_AMD64_URL=https://download.freebsd.org/releases/amd64/amd64/ISO-IMAGES/12.3/FreeBSD-12.3-RELEASE-amd64-dvd1.iso.xz \
+     FREEBSD_I386_URL=https://download.freebsd.org/releases/i386/i386/ISO-IMAGES/12.3/FreeBSD-12.3-RELEASE-i386-dvd1.iso.xz \
+    FREEBSD_ARM64_URL=https://download.freebsd.org/releases/arm64/aarch64/ISO-IMAGES/12.3/FreeBSD-12.3-RELEASE-arm64-aarch64-dvd1.iso.xz
+
+ADD ${FREEBSD_AMD64_URL} /tmp/freebsd-amd64/dvd1.iso.xz
+ADD ${FREEBSD_I386_URL}  /tmp/freebsd-i386/dvd1.iso.xz
+ADD ${FREEBSD_ARM64_URL} /tmp/freebsd-arm64/dvd1.iso.xz
+
+# Unpack amd64 toolchain /usr/freebsd/x86_64-pc-freebsd12
+RUN mkdir -p /usr/freebsd/x86_64-pc-freebsd12   \
+ && cd /tmp/freebsd-amd64                       \
+ && xz -d dvd1.iso.xz                           \
+ && bsdtar -xf dvd1.iso lib usr/include usr/lib \
+ && mv lib /usr/freebsd/x86_64-pc-freebsd12/    \
+ && mv usr /usr/freebsd/x86_64-pc-freebsd12/
+
+# Unpack i386 toolchain to /usr/freebsd/i386-pc-freebsd12
+RUN mkdir -p /usr/freebsd/i386-pc-freebsd12     \
+ && cd /tmp/freebsd-i386                        \
+ && xz -d dvd1.iso.xz                           \
+ && bsdtar -xf dvd1.iso lib usr/include usr/lib \
+ && mv lib /usr/freebsd/i386-pc-freebsd12/      \
+ && mv usr /usr/freebsd/i386-pc-freebsd12/
+
+# Unpack arm64 toolchain to /usr/freebsd/aarch64-pc-freebsd12
+RUN mkdir -p /usr/freebsd/aarch64-pc-freebsd12  \
+ && cd /tmp/freebsd-arm64                       \
+ && xz -d dvd1.iso.xz                           \
+ && bsdtar -xf dvd1.iso lib usr/include usr/lib \
+ && mv lib /usr/freebsd/aarch64-pc-freebsd12/   \
+ && mv usr /usr/freebsd/aarch64-pc-freebsd12/
+
+# Create binutils to use for building FreeBSD targets. Specifically, we do this
+# to pass to the -B flag of clang to ensure that builds for FreeBSD always use
+# ld.lld.
+#
+# See https://mcilloni.ovh/2021/02/09/cxx-cross-clang/
+RUN mkdir -p /usr/freebsd/bin                                \
+ && ln -sf /usr/bin/llvm-ar-11      /usr/freebsd/bin/ar      \
+ && ln -sf /usr/bin/ld.lld          /usr/freebsd/bin/ld      \
+ && ln -sf /usr/bin/llvm-objcopy-11 /usr/freebsd/bin/objcopy \
+ && ln -sf /usr/bin/llvm-objdump-11 /usr/freebsd/bin/objdump \
+ && ln -sf /usr/bin/llvm-ranlib-11  /usr/freebsd/bin/ranlib  \
+ && ln -sf /usr/bin/llvm-strings-11 /usr/freebsd/bin/strings
 
 FROM environment as osxcross
 
@@ -55,6 +110,8 @@ RUN  mkdir -p /tmp/osxcross && cd /tmp/osxcross                                 
 
 FROM environment
 
+COPY --from=freebsd /usr/freebsd /usr/freebsd
+
 COPY --from=osxcross /usr/osxcross /usr/osxcross
 ENV PATH /usr/osxcross/bin:$PATH
 
@@ -62,3 +119,4 @@ COPY ./viceroycc-darwin  /usr/bin/viceroycc-darwin
 COPY ./viceroycc-freebsd /usr/bin/viceroycc-freebsd
 COPY ./viceroycc-linux   /usr/bin/viceroycc-linux
 COPY ./viceroycc-windows /usr/bin/viceroycc-windows
+
