--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -15,12 +15,22 @@ jobs:
         run: docker login -u rfratto -p "${{ secrets.DOCKER_PASS }}"
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Make container
-        run: OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }} make build
-      - name: Rename container
-        run: docker tag rfratto/viceroy:latest rfratto/viceroy:${{ github.ref_name }}
-      - name: Push container
+      - name: Prepare buildx
         run: |
-          docker push rfratto/viceroy:${{ github.ref_name }}
-          docker push rfratto/viceroy:latest
+          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+          docker buildx create --name multiarch --driver docker-container --use
+      - name: Bake containers
+        run: OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }} make bake
+      - name: Produce manifests
+        run: |
+          docker manifest create rfratto/viceroy:latest \
+            rfratto/viceroy:latest-amd64 \
+            rfratto/viceroy:latest-arm64
+          docker manifest create rfratto/viceroy:${{ github.ref_name }} \
+            rfratto/viceroy:latest-amd64 \
+            rfratto/viceroy:latest-arm64
+      - name: Push manifests
+        run: |
+          docker manifest push rfratto/viceroy:latest
+          docker manifest push rfratto/viceroy:${{ github.ref_name }}
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
