--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -20,7 +20,10 @@ jobs:
           docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
           docker buildx create --name multiarch --driver docker-container --use
       - name: Bake containers
-        run: OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }} make bake
+        run: |
+          export OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }}
+          docker buildx bake viceroy-arm64
+          docker buildx bake viceroy-amd64
       - name: Produce manifests
         run: |
           docker manifest create rfratto/viceroy:latest \
