--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -7,33 +7,24 @@ on:
     tags:
       - 'v*'
 jobs:
-  build:
+  build-arm64:
+    name: Build ARM64 Container
+    runs-on: [Linux, ARM64]
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Bake ARM64 container
+      run: |
+        export OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }}
+        docker buildx bake viceroy-arm64
+
+  build-amd64:
     name: Build Container
     runs-on: ubuntu-latest
     steps:
-      - name: Login to Docker Hub
-        run: docker login -u rfratto -p "${{ secrets.DOCKER_PASS }}"
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Prepare buildx
-        run: |
-          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-          docker buildx create --name multiarch --driver docker-container --use
-      - name: Bake containers
+      - name: Bake AMD64 container
         run: |
           export OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }}
-          docker buildx bake viceroy-arm64
           docker buildx bake viceroy-amd64
-      - name: Produce manifests
-        run: |
-          docker manifest create rfratto/viceroy:latest \
-            rfratto/viceroy:latest-amd64 \
-            rfratto/viceroy:latest-arm64
-          docker manifest create rfratto/viceroy:${{ github.ref_name }} \
-            rfratto/viceroy:latest-amd64 \
-            rfratto/viceroy:latest-arm64
-      - name: Push manifests
-        run: |
-          docker manifest push rfratto/viceroy:latest
-          docker manifest push rfratto/viceroy:${{ github.ref_name }}
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
