--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -7,19 +7,8 @@ on:
     tags:
       - 'v*'
 jobs:
-  build-arm64:
-    name: Build ARM64 Container
-    runs-on: [Linux, ARM64]
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Bake ARM64 container
-      run: |
-        export OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }}
-        docker buildx bake viceroy-arm64
-
-  build-amd64:
-    name: Build Container
+  build_amd64:
+    name: Build AMD64 Container
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -27,4 +16,56 @@ jobs:
       - name: Bake AMD64 container
         run: |
           export OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }}
-          docker buildx bake viceroy-amd64
+          docker buildx bake --pull viceroy-amd64 '--set=*.output=type=tar,dest=viceroy-amd64.tar'
+      - name: Upload container
+        uses: actions/upload-artifact@v3
+        with:
+          name: viceroy-amd64.tar
+          path: viceroy-amd64.tar
+
+  build_arm64:
+    name: Build ARM64 Container
+    runs-on: [Linux, ARM64]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Bake ARM64 container
+        run: |
+          export OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }}
+          docker buildx bake --pull viceroy-arm64 '--set=*.output=type=tar,dest=viceroy-arm64.tar'
+      - name: Upload container
+        uses: actions/upload-artifact@v3
+        with:
+          name: viceroy-arm64.tar
+          path: viceroy-arm64.tar
+
+  bundle-manifests:
+    name: Bundle manifests
+    needs: [build_amd64, build_arm64]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download AMD64 image
+        uses: actions/download-artifact@v3
+        with:
+          name: viceroy-amd64.tar
+      - name: Download ARM64 image
+        uses: actions/download-artifact@v3
+        with:
+          name: viceroy-arm64.tar
+      - name: Load images
+        run: |
+          docker load -i viceroy-amd64.tar
+          docker load -i viceroy-arm64.tar
+      - name: Produce manifests
+        run: |
+          docker manifest create rfratto/viceroy:latest \
+            rfratto/viceroy:latest-amd64 \
+            rfratto/viceroy:latest-arm64
+          docker manifest create rfratto/viceroy:${{ github.ref_name }} \
+            rfratto/viceroy:latest-amd64 \
+            rfratto/viceroy:latest-arm64
+      - name: Push manifests
+        run: |
+          docker manifest push rfratto/viceroy:latest
+          docker manifest push rfratto/viceroy:${{ github.ref_name }}
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
