--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -16,12 +16,12 @@ jobs:
       - name: Bake AMD64 container
         run: |
           export OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }}
-          docker buildx bake --pull viceroy-amd64 '--set=*.output=type=tar,dest=viceroy-amd64.tar'
+          docker buildx bake --pull viceroy-amd64 '--set=*.output=type=tar,dest=-' | gzip > viceroy-amd64.tar.gz
       - name: Upload container
         uses: actions/upload-artifact@v3
         with:
-          name: viceroy-amd64.tar
-          path: viceroy-amd64.tar
+          name: viceroy-amd64.tar.gz
+          path: viceroy-amd64.tar.gz
 
   build_arm64:
     name: Build ARM64 Container
@@ -32,12 +32,12 @@ jobs:
       - name: Bake ARM64 container
         run: |
           export OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }}
-          docker buildx bake --pull viceroy-arm64 '--set=*.output=type=tar,dest=viceroy-arm64.tar'
+          docker buildx bake --pull viceroy-arm64 '--set=*.output=type=tar,dest=-' | gzip > viceroy-arm64.tar.gz
       - name: Upload container
         uses: actions/upload-artifact@v3
         with:
-          name: viceroy-arm64.tar
-          path: viceroy-arm64.tar
+          name: viceroy-arm64.tar.gz
+          path: viceroy-arm64.tar.gz
 
   bundle-manifests:
     name: Bundle manifests
@@ -47,15 +47,15 @@ jobs:
       - name: Download AMD64 image
         uses: actions/download-artifact@v3
         with:
-          name: viceroy-amd64.tar
+          name: viceroy-amd64.tar.gz
       - name: Download ARM64 image
         uses: actions/download-artifact@v3
         with:
-          name: viceroy-arm64.tar
+          name: viceroy-arm64.tar.gz
       - name: Load images
         run: |
-          docker load -i viceroy-amd64.tar
-          docker load -i viceroy-arm64.tar
+          docker load -i viceroy-amd64.tar.gz
+          docker load -i viceroy-arm64.tar.gz
       - name: Produce manifests
         run: |
           docker manifest create rfratto/viceroy:latest \
