--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -15,8 +15,13 @@ jobs:
         uses: actions/checkout@v2
       - name: Bake AMD64 container
         run: |
-          export OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }}
-          docker buildx bake --pull viceroy-amd64 '--set=*.output=type=tar,dest=-' | gzip > viceroy-amd64.tar.gz
+          docker buildx build \
+            -t rfratto/viceroy:latest-amd64 \
+            --platform=linux/amd64 \
+            --build-arg OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }} \
+            --output=type=tar,dest=viceroy-amd64.tar \
+            .
+          gzip viceroy-amd64.tar
       - name: Upload container
         uses: actions/upload-artifact@v3
         with:
@@ -31,8 +36,13 @@ jobs:
         uses: actions/checkout@v2
       - name: Bake ARM64 container
         run: |
-          export OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }}
-          docker buildx bake --pull viceroy-arm64 '--set=*.output=type=tar,dest=-' | gzip > viceroy-arm64.tar.gz
+          docker buildx build \
+            -t rfratto/viceroy:latest-arm64 \
+            --platform=linux/arm64 \
+            --build-arg OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }} \
+            --output=type=tar,dest=viceroy-arm64.tar \
+            .
+          gzip viceroy-arm64.tar
       - name: Upload container
         uses: actions/upload-artifact@v3
         with:
