--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -21,7 +21,8 @@ jobs:
             --build-arg OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }} \
             --output=type=tar,dest=viceroy-amd64.tar \
             .
-          gzip viceroy-amd64.tar
+      - name: Compress tarball
+        run: gzip viceroy-amd64.tar
       - name: Upload container
         uses: actions/upload-artifact@v3
         with:
@@ -42,7 +43,8 @@ jobs:
             --build-arg OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }} \
             --output=type=tar,dest=viceroy-arm64.tar \
             .
-          gzip viceroy-arm64.tar
+      - name: Compress tarball
+        run: gzip viceroy-arm64.tar
       - name: Upload container
         uses: actions/upload-artifact@v3
         with:
@@ -64,8 +66,8 @@ jobs:
           name: viceroy-arm64.tar.gz
       - name: Load images
         run: |
-          docker load -i viceroy-amd64.tar.gz
-          docker load -i viceroy-arm64.tar.gz
+          cat viceroy-amd64.tar.gz | docker import - rfratto/viceroy:latest-amd64
+          cat viceroy-arm64.tar.gz | docker import - rfratto/viceroy:latest-arm64
       - name: Produce manifests
         run: |
           docker manifest create rfratto/viceroy:latest \
