--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -19,7 +19,7 @@ jobs:
             -t rfratto/viceroy:latest-amd64 \
             --platform=linux/amd64 \
             --build-arg OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }} \
-            --output=type=tar,dest=viceroy-amd64.tar \
+            --output=type=docker,dest=viceroy-amd64.tar \
             .
       - name: Compress tarball
         run: gzip viceroy-amd64.tar
@@ -41,7 +41,7 @@ jobs:
             -t rfratto/viceroy:latest-arm64 \
             --platform=linux/arm64 \
             --build-arg OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }} \
-            --output=type=tar,dest=viceroy-arm64.tar \
+            --output=type=docker,dest=viceroy-arm64.tar \
             .
       - name: Compress tarball
         run: gzip viceroy-arm64.tar
@@ -66,8 +66,8 @@ jobs:
           name: viceroy-arm64.tar.gz
       - name: Load images
         run: |
-          cat viceroy-amd64.tar.gz | docker import - rfratto/viceroy:latest-amd64
-          cat viceroy-arm64.tar.gz | docker import - rfratto/viceroy:latest-arm64
+          docker load -i viceroy-amd64.tar.gz
+          docker load -i viceroy-arm64.tar.gz
       - name: Produce manifests
         run: |
           docker manifest create rfratto/viceroy:latest \
