--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -19,18 +19,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Create buildx driver
-        run: |
-          docker buildx create --name viceroy-builder --driver docker-container || true
       - name: Build container
         run: |
-          docker buildx build \
-            --builder=viceroy-builder \
+          docker build \
             -t rfratto/viceroy:latest-amd64 \
-            --platform=linux/amd64 \
             --build-arg OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }} \
-            --pull \
-            --load \
             .
       - name: Login to Docker Hub
         run: docker login -u rfratto -p "${{ secrets.DOCKER_PASS }}"
@@ -51,13 +44,9 @@ jobs:
           docker buildx create --name viceroy-builder --driver docker-container || true
       - name: Build container
         run: |
-          docker buildx build \
-            --builder=viceroy-builder \
+          docker build \
             -t rfratto/viceroy:latest-arm64 \
-            --platform=linux/arm64 \
             --build-arg OSXCROSS_SDK_URL=${{ secrets.OSXCROSS_SDK_URL }} \
-            --pull \
-            --load \
             .
       - name: Login to Docker Hub
         run: docker login -u rfratto -p "${{ secrets.DOCKER_PASS }}"
