--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -16,3 +16,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ steps.get_workflow_token.outputs.token }}
+          path: ./viceroy
+
+      - name: Build Docker image (AMD64)
+        run: make build
+        working-directory: ./viceroy
+        env:
+          OSXCROSS_SDK_URL: ${{ secrets.OSXCROSS_SDK_URL }}
+
