--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -3,7 +3,8 @@ on:
   pull_request: {}
 jobs:
   integration-test:
-    runs-on: [self-hosted, ubuntu-latest, amd64]
+    # runs-on: [self-hosted, ubuntu-latest, amd64]
+    runs-on: ubuntu-latest
     steps:
       - name: Get Token
         id: get_workflow_token
@@ -19,7 +20,7 @@ jobs:
           path: ./viceroy
 
       - name: Build Docker image (AMD64)
-        run: make build
+        run: docker build -t rfratto/viceroy:latest --build-arg OSXCROSS_SDK_URL=${OSXCROSS_SDK_URL} .
         working-directory: ./viceroy
         env:
           OSXCROSS_SDK_URL: ${{ secrets.OSXCROSS_SDK_URL }}
