--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -3,8 +3,8 @@ on:
   pull_request: {}
 jobs:
   integration-test:
-    # runs-on: [self-hosted, ubuntu-latest, amd64]
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, ubuntu-latest, amd64]
+    # runs-on: ubuntu-latest
     steps:
       - name: Get Token
         id: get_workflow_token
